[package]
name = "ghdns"
version = "0.1.1"
authors = ["bai <nkbai@163.com>", "azhai <azhai@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2",  features = ["full"] } #{ version = "0.2.0", path = "../tokio", features = ["full"] }
tokio-util ={ version = "0.2",  features = ["full"] } #{ version = "0.2.0", path = "../tokio-util", features = ["full"] }
tokio-tls=  "0.3" # {version="0.3",path="../tokio-tls" }
futures = "0.3.0"
native-tls = "0.2"
scraper = "0.11.0"
sys-info="0.5"
clap="2.33"